# obs_mpris

./: Cargo.toml  LICENSE  README.md
src/: filter.rs  global.rs  lib.rs  nothing.effect  properties.rs  source.rs
