[package]
name = "obs_mpris"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
obs-wrapper = "0.4.1"
obs-sys = "^0.2.0"
log = "^0.4.11"
mpris = "^1.1.2"
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
handlebars = "4.3.5"

[lib]
crate-type=["cdylib"]
